--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,4 @@
 {
-  "name": "skincare-frontend",
   "version": 2,
   "builds": [
     {
@@ -14,7 +13,7 @@
     {
       "src": "/assets/(.*)",
       "headers": {
-        "cache-control": "max-age=31536000"
+        "cache-control": "max-age=31536000, immutable"
       }
     },
     {
