--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx vite build",
-    "vercel-build": "npx vite build",
+    "build": "node build.js",
+    "vercel-build": "node build.js",
+    "fallback-build": "node fallback-build.js",
+    "build:original": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
